--- a/style.css
+++ b/style.css
@@ -43,13 +43,7 @@ body {
   grid-template-areas:
     "sideBar navbar navbar navbar"
     "sideBar appContent appContent appContent";
-  /* height: 200vh; */
-  /* overflow-y: auto; */
 }
-
-/* .container::-webkit-scrollbar {
-  display: none;
-} */
 
 .nav-bar {
   display: flex;
@@ -108,7 +102,7 @@ body {
   position: absolute;
   top: 80px;
   left: 0;
-  margin-top: 10px;
+  margin-top: 4px;
   width: 100%;
   overflow: hidden;
   /* max-height: 0; */
@@ -127,24 +121,16 @@ body {
 
 .sort-menu__item {
   font-size: 10px;
-  padding: 2px 20px;
+  padding: 4px 20px;
 }
 
 .sort-menu__item:hover {
-  color: var(--mainBlack);
+  color: var(--maincolor);
 }
-
-/* .note-favorite-btn {
-  color: var(--bodyColor);
-} */
 
 .note-favorite-btn--selected {
   color: gold !important;
 }
-
-/* .fa-star--select {
-  color: gold;
-} */
 
 .favorite-menu {
   display: flex;
@@ -169,7 +155,6 @@ body {
 .nav-bar__search-title {
   display: none;
   margin: 0 10px;
-  /* margin-right: 10px; */
 }
 
 .nav-bar__search-input {
@@ -314,10 +299,6 @@ body {
     padding: 30px 20px;
   }
 
-  .nav-bar__menu {
-    top: 50px;
-  }
-
   .nav-bar__search-title {
     display: inline;
   }
@@ -329,6 +310,8 @@ body {
 
   .nav-bar__menu {
     justify-content: flex-end;
+    top: 50px;
+    margin-top: 10px;
   }
 
   .sort-menu,
@@ -339,11 +322,6 @@ body {
   .nav-bar__sort.toggleMenu ~ .nav-bar__menu .sort-menu {
     width: 37%;
   }
-
-  /* .favorite-menu > .note-color {
-    width: 20px;
-    height: 20px;
-  } */
 
   .sort-menu__item {
     font-size: 12px;
@@ -364,7 +342,6 @@ body {
 
 /* note content */
 .content {
-  /* height: 200vh; */
   grid-area: appContent;
   padding: 20px;
 }
@@ -407,7 +384,6 @@ body {
 .password-container,
 .password-Btn-content {
   display: none;
-  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -448,14 +424,12 @@ body {
 .password-input {
   display: block;
   width: 60%;
-  /* padding: 5px; */
   outline: none;
   border: none;
   font-size: 15px;
   border-radius: 4px;
   background: #0000002b;
   color: white;
-  /* margin-top: 40px; */
   margin: 0;
   visibility: hidden;
   max-height: 0;
@@ -474,8 +448,6 @@ body {
 .password-login-btn,
 .password-save-btn {
   width: 60%;
-  /* padding: 5px 15px; */
-  /* margin-top: 10px; */
   margin: 0;
   font-family: "iranyekan";
   font-size: 14px;
@@ -553,9 +525,6 @@ body {
 }
 
 .note-button {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   display: block;
   background-color: var(--maincolor);
   width: 20px;
@@ -634,7 +603,6 @@ body {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   transition: max-height 0.3s ease;
-  /* border: 1px solid ; */
 }
 
 .show-color-picker {
@@ -654,7 +622,6 @@ body {
 @media screen and (min-width: 600px) {
   .note-items {
     flex-direction: row;
-    /* justify-content: space-between; */
   }
 
   .note-item {
